with ref-figure

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -158,7 +158,7 @@ Compared to other relational database management systems, RDF is completely flex
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.75\textwidth]{rdf}
-    \caption{\textbf{General outline of RDF.} By linking two triples by their common subjects, one can infer the relationship between the two objects via the predicates and find patterns: a gene, responsible for calcium ion binding, has a low phosphorylation level in the investigated sample.}
+    \caption{\textbf{General outline of RDF.} Two triples (as shown in \textbf{A}) can be linked by their common subjects (as shown in \textbf{B}), one can infer the relationship between the two objects via the predicates and find patterns: a gene, responsible for calcium ion binding, has a low phosphorylation level in the investigated sample.}
     \label{fig:rdf}
 \end{figure}
 \noindent
